--- a/client-side/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/client-side/src/app/components/shopping-cart/shopping-cart.component.html
@@ -23,7 +23,7 @@
           </tr>
         </tbody>
         <tr>
-          <th>Total Price: {{total | currency }}</th>
+          <th><h4>Total Price: {{total | currency }}</h4></th>
         </tr>
       </table>
 
