--- a/client-side/src/app/app.component.css
+++ b/client-side/src/app/app.component.css
@@ -47,4 +47,19 @@ p {
     text-align: left;
 }
 
+/* New SubNav Bar */
+.dropdown{
+    list-style: none;
+}
 
+.navlink {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 20px;
+    color: #FA3F60;
+    font-weight: bold;
+}
+
+.listnav {
+    display: inline-block;
+}
