fixed subtotal and quantity bug!

--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <nav class="navbar navbar-expand-lg" style="background-color: #f7cd37">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">STEAM Vault</a>
+    <!-- <a class="navbar-brand" href="#">STEAM Vault</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -29,8 +29,8 @@
                 target="_blank">Shop TPT</a></li>
           </ul>
         </li>
-      </ul>
-    </div>
+      </ul> -->
+    <!-- </div> -->
     <div class="sale p-3 me-5">BACK TO SCHOOL SALE {{salePercent + ' OFF!'}}</div>
 
     <button class="btn btn-primary position-relative" routerLink="/cart" (click)="getItems()"> <span
