--- a/client-side/src/app/components/home/home.component.html
+++ b/client-side/src/app/components/home/home.component.html
@@ -1,11 +1,4 @@
-<!-- Hero Section -->
-<!-- <section>
-<div id="hero">
-    <h1 class="pt-5">INTERACTIVE. ENGAGING. SIMPLE.</h1>
-    <h2>Fully planned activities, so you don't have to.</h2>
-</div>
-</section> -->
-
+<!-- Carousel -->
 <section id="hero-carousel">
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -31,6 +24,8 @@
 </section>
 
 <!-- Freebie Section -->
+
+
 <section>
 <div id="freebie" class="m-4">
     <div class="yellow-outline pb-4">
