--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -34,9 +34,8 @@
     <div class="sale p-3 me-5">BACK TO SCHOOL SALE {{salePercent + ' OFF!'}}</div>
 
     <button class="btn btn-primary position-relative" routerLink="/cart" (click)="getItems()"> <span
-        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-        *<span class="visually-hidden">unread messages</span>
-      </span><mat-icon>shopping_cart</mat-icon>
+        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">*<span class="visually-hidden">unread messages</span>
+      </span><i class="fa-solid fa-cart-shopping"></i>
     </button>
   </div>
 </nav>
