--- a/client-side/src/app/components/home/home.component.css
+++ b/client-side/src/app/components/home/home.component.css
@@ -38,12 +38,12 @@ img {
 }
 
 .yellow-outline{
-    border: 3px #f7cd37 solid;
+    border: 3px #FBB0AE solid;
     
 }
 
 h3 {
-    background-color: #f7cd37;
+    background-color: #FBB0AE;
     width: 600px;
     text-align: center;
     margin-right: auto;
