--- a/client-side/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/client-side/src/app/components/shopping-cart/shopping-cart.component.html
@@ -29,7 +29,7 @@
           </tr>
         </tbody>
         <tr>
-          <th><h4>Total Price: {{total | currency }}</h4></th>
+          <th><h4>Subtotal: {{total | currency }}</h4></th>
         </tr>
       </table>
     </div>
