--- a/client-side/src/app/components/product/product.component.css
+++ b/client-side/src/app/components/product/product.component.css
@@ -1,10 +1,15 @@
 .carousel-container {
-    width: 450px;
+    width: 500px;
 }
 
 .carousel-control-next,
 .carousel-control-prev{
     filter: invert(100%);
+}
+
+.product-container{
+    display: flex;
+    justify-content: space-evenly;
 }
 
 /* .product-info {
