--- a/client-side/src/app/components/product/product.component.html
+++ b/client-side/src/app/components/product/product.component.html
@@ -1,7 +1,8 @@
 <div>
-  <div class="row my-4 text-center">
+  <div class="row my-4 text-center product-container">
     <!-- Carousel on the Right of Product Image -->
-    <div class="carousel-container col-4 offset-3">
+    <!-- <div class="carousel-container col-4 offset-3">
+      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -36,7 +37,39 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      </div>
+    </div> -->
+    <div class="carousel-container col-6 mt-4">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="{{product.cover}}" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="{{product.preview1}}" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="{{product.preview2}}" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="{{product.preview3}}" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
+  </div>
+
+
+
+
+
 
     <!-- Product Info on the Left -->
     <div class="col-4 product-info p-4">
