--- a/client-side/src/app/components/shop/shop.component.html
+++ b/client-side/src/app/components/shop/shop.component.html
@@ -11,7 +11,7 @@
                     <input type="radio" name="grade_number" value="8" formControlName="grade_number"> Grade 8 <br>
                     <br>
 
-                    <h4>Subjects</h4>
+                    <h4>Subject</h4>
                     <select name="subject" formControlName="subject_name">
                         <option selected disabled>Choose a Subject</option>
                         <option *ngFor="let subject of subjects" [value]="subject.subject_name">{{subject.subject_name}}
