--- a/client-side/src/app/components/home/home.component.css
+++ b/client-side/src/app/components/home/home.component.css
@@ -1,3 +1,6 @@
+/* #body{
+    background-color: rgba(255,189,88, 0.5);
+} */
 h1{
     text-align: center;
     font-weight: bold;
@@ -18,12 +21,14 @@ h2 {
 }
 
 .carousel .carousel-item {
-    height: 650px;
+    height: 500px;
   }
   
   .carousel-item img {
     height: 100% !important;
-    width:  100% !important;
+    width:  90% !important;
+    margin-left: auto;
+    margin-right: auto
   }
 
 #hero-carousel{
@@ -38,12 +43,15 @@ img {
 }
 
 .yellow-outline{
-    border: 3px #FBB0AE solid;
-    
+    border: 3px #004AAD solid;
+    background-color: white;
+    width: 91%;
+    margin-left: auto;
+    margin-right: auto
 }
 
 h3 {
-    background-color: #FBB0AE;
+    background-color: #004AAD;
     width: 600px;
     text-align: center;
     margin-right: auto;
@@ -74,4 +82,9 @@ img {
 .flex-container {
     display: flex;
     justify-content: center;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
