--- a/client-side/src/app/components/home/home.component.html
+++ b/client-side/src/app/components/home/home.component.html
@@ -1,87 +1,98 @@
-<!-- Carousel -->
-<section id="hero-carousel">
+<div id="body">
+  <!-- Carousel -->
+  <section id="hero-carousel">
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/assets/1.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/assets/2.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/assets/3.png" class="d-block w-100" alt="...">
-          </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/assets/hero1.png" class="d-block w-100" alt="...">
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+        <div class="carousel-item">
+          <img src="/assets/2.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="/assets/hero3.png" class="d-block w-100" alt="...">
+        </div>
       </div>
-</section>
-
-<!-- Freebie Section -->
-
-
-<section>
-<div id="freebie" class="m-4">
-    <div class="yellow-outline pb-4">
-        <h3 class="p-2">Self-Checking Online Math Puzzles</h3>
-        <div class="free-info p-4 row">
-            <div class="free-img col-6 offset-3">
-                <img [src]="free" id="freebie-img">
-               
-            </div>
-        
-            <div class="email-list col-6">
-                <p>Download a FREE Online Math Puzzle, straight from your inbox!</p>
-                <form [formGroup]="freebieForm">
-                    <!-- Name -->
-                    <input type="text" placeholder="Name" formControlName="name"><br> 
-                    <span *ngIf="name.touched && name.errors?.['required']">A name is required</span>
-                    <span *ngIf="name.dirty && name.errors?.['minlength']">Name must be at least 2 characters long</span><br>
-                    
-                    <!-- Email -->
-                    <input type="text" placeholder="Email" formControlName="email"><br>
-                    <span *ngIf="email.touched && name.errors?.['required']">An email is required</span>
-                    <span *ngIf="email.dirty && name.errors?.['email']">Please provide a valid email address</span><br>
-
-                    <button type="button" class="btn btn-primary" [disabled]="freebieForm.invalid" (click)="onSubmit()">Submit</button>
-
-                </form>
-            </div>
-            
-        </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
+  </section>
 
-</div>
-</section>
+  <!-- Freebie Section -->
 
-<!-- Products Section -->
-<section>
-<div id="freebie" class="m-4">
-    <div class="yellow-outline pb-4">
-        <h3 class="p-2">Shop Our Products</h3>
-        <div class="product-info p-4 row ">
+
+  <section>
+    <div id="freebie" class="my-4">
+      <div class="yellow-outline pb-4">
+        <h3 class="p-2 text-white">Self-Checking Online Math Puzzles</h3>
+        <div class="free-info p-4 row">
+          <div class="free-img col-6 offset-3">
+            <img [src]="free" id="freebie-img">
+
+          </div>
+
+          <div class="email-list col-6">
+            <p>Download a FREE Online Math Puzzle, straight from your inbox!</p>
+            <form [formGroup]="freebieForm">
+              <!-- Name -->
+              <input type="text" placeholder="Name" formControlName="name"><br>
+              <span *ngIf="name.touched && name.errors?.['required']">A name is required</span>
+              <span *ngIf="name.dirty && name.errors?.['minlength']">Name must be at least 2 characters long</span><br>
+
+              <!-- Email -->
+              <input type="text" placeholder="Email" formControlName="email"><br>
+              <span *ngIf="email.touched && name.errors?.['required']">An email is required</span>
+              <span *ngIf="email.dirty && name.errors?.['email']">Please provide a valid email address</span><br>
+
+              <button type="button" class="btn btn-primary" [disabled]="freebieForm.invalid"
+                (click)="onSubmit()">Submit</button>
+
+            </form>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Products Section -->
+  <section>
+    <div>
+      <div id="products" class="pb-4">
+        <div class="yellow-outline pb-4">
+          <h3 class="p-2 text-white">Shop Our Products</h3>
+          <div class="product-info p-4 row ">
             <!-- Preview 1 -->
             <div class="flex-container col-4">
-                <img [src]="product1" class="product-img">
+              <img [src]="product1" class="product-img">
             </div>
             <!-- Preview 2 -->
             <div class="flex-container col-4">
-                <img [src]="product2" class=" product-img">
+              <img [src]="product2" class=" product-img">
             </div>
             <!-- Preview 3 -->
             <div class="flex-container col-4">
-                <img [src]="product3" class="product-img">
+              <img [src]="product3" class="product-img">
             </div>
-            <button type="button" class="btn btn-primary col-2 offset-5 mt-5" routerLink="/shop">VIEW ALL PRODUCTS</button>
-        </div>
-       
-    </div>
+            <div class="flex-container">
+              <button type="button" class="btn btn-warning mx-4 mt-5" routerLink="/shop">VIEW ALL
+                PRODUCTS</button>
+              <button type="button" class="btn btn-danger mt-5"> <a href="https://www.teacherspayteachers.com/Store/Steam-Vault" target="_blank">VIEW ON TEACHERS PAY
+                TEACHERS</a></button>
+            </div>
+          </div>
 
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
-</section>
